fix: ensured that Alert text does not overflow

--- a/packages/core/src/components/alert/_alert.scss
+++ b/packages/core/src/components/alert/_alert.scss
@@ -18,6 +18,10 @@
   }
 }
 
+.#{$ns}-alert-contents {
+  word-break: break-word;
+}
+
 .#{$ns}-alert-footer {
   display: flex;
   flex-direction: row-reverse;
